[gd_scene load_steps=15 format=3 uid="uid://cqtxug2mo8nc4"]

[ext_resource type="Script" path="res://world.gd" id="1_jsw0v"]
[ext_resource type="Texture2D" uid="uid://ddmede3qsvy3t" path="res://Asset/terrain.png" id="1_k5lrj"]
[ext_resource type="PackedScene" uid="uid://botojytb3hmev" path="res://player.tscn" id="2_d4fdg"]
[ext_resource type="PackedScene" uid="uid://ckv67syi0f7hx" path="res://rigid_body_2d.tscn" id="3_3dmg3"]
[ext_resource type="Shader" path="res://blink.gdshader" id="4_lym22"]
[ext_resource type="PackedScene" uid="uid://c4w3p1w65gipi" path="res://adversaire.tscn" id="5_3y5tl"]
[ext_resource type="PackedScene" uid="uid://t2ob1gqccyas" path="res://pause_menu.tscn" id="7_quc8o"]
[ext_resource type="PackedScene" uid="uid://cryn04buh1qqg" path="res://fin_de_jeu.tscn" id="8_xqhvm"]
[ext_resource type="AudioStream" uid="uid://cg8yn7jfs6qpq" path="res://Musique/celebration.mp3" id="9_w53cw"]
[ext_resource type="PackedScene" uid="uid://b7v3im3b40tav" path="res://debug_overlay.tscn" id="10_bp8ac"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_x0gst"]
a = Vector2(290.745, 2.64056)
b = Vector2(9.25449, 1.76037)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kn70s"]
shader = ExtResource("4_lym22")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_rtdfa"]
a = Vector2(51.0396, -6.23847)
b = Vector2(51.0396, 21.8176)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_140pt"]
a = Vector2(-0.990082, -14.0281)
b = Vector2(-0.990082, 13.0261)

[node name="World" type="Node2D"]
scale = Vector2(1.01, 0.998)
script = ExtResource("1_jsw0v")

[node name="Terrain" type="Sprite2D" parent="."]
scale = Vector2(1.28383, 1.1384)
texture = ExtResource("1_k5lrj")
centered = false

[node name="RigidBody2D" type="RigidBody2D" parent="Terrain"]
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/RigidBody2D"]
position = Vector2(2.38419e-07, -0.880185)
shape = SubResource("SegmentShape2D_x0gst")

[node name="Ballon" parent="." instance=ExtResource("3_3dmg3")]
position = Vector2(193.069, 109.218)

[node name="Player" parent="." instance=ExtResource("2_d4fdg")]
material = SubResource("ShaderMaterial_kn70s")
position = Vector2(132.673, 109.218)
platform_floor_layers = 4278190081

[node name="Adversaire" parent="." instance=ExtResource("5_3y5tl")]
position = Vector2(245.545, 108.216)
platform_floor_layers = 1

[node name="Label" type="Label" parent="."]
offset_left = 84.0
offset_top = 10.0
offset_right = 124.0
offset_bottom = 33.0

[node name="ButPlayer" type="Area2D" parent="."]
position = Vector2(4.9505, 108.216)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButPlayer"]
position = Vector2(-44.1089, -6.78758)
shape = SubResource("SegmentShape2D_rtdfa")
one_way_collision_margin = 20.5

[node name="ButAdversaire" type="Area2D" parent="."]
position = Vector2(386.139, 113.226)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButAdversaire"]
position = Vector2(-11.8816, -4.00757)
scale = Vector2(1.1, 1.1)
shape = SubResource("SegmentShape2D_140pt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Timer" type="Label" parent="Control"]
layout_mode = 0
offset_left = 40.5941
offset_top = 9.01804
offset_right = 90.5941
offset_bottom = 35.018
text = "02 : 00"

[node name="Timer2" type="Timer" parent="Control"]

[node name="CanvasLayerPauseMenu" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayerPauseMenu" instance=ExtResource("7_quc8o")]
process_mode = 3

[node name="CanvasLayerFinDeJeu" type="CanvasLayer" parent="."]

[node name="fin_de_jeu" parent="CanvasLayerFinDeJeu" instance=ExtResource("8_xqhvm")]
visible = false

[node name="ScoreControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Score" type="Label" parent="ScoreControl"]
layout_mode = 0
offset_left = 135.0
offset_top = 8.0
offset_right = 187.0
offset_bottom = 34.0
text = "Score :"

[node name="ScoreControlPlayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 57.4257
offset_top = 3.00601
offset_right = 97.4258
offset_bottom = 43.006

[node name="ScorePlayer" type="Label" parent="ScoreControlPlayer"]
layout_mode = 0
offset_left = 138.614
offset_top = 6.01202
offset_right = 152.614
offset_bottom = 32.012
text = "0"

[node name="ScoreDeuxPoints" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DeuxPoints" type="Label" parent="ScoreDeuxPoints"]
layout_mode = 0
offset_left = 214.851
offset_top = 9.01804
offset_right = 220.851
offset_bottom = 43.018
text = ":
"

[node name="ScoreControlAdversaire" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreAdversaire" type="Label" parent="ScoreControlAdversaire"]
layout_mode = 0
offset_left = 226.0
offset_top = 9.0
offset_right = 237.0
offset_bottom = 35.0
text = "0
"

[node name="celebrationBut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_w53cw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugOverlay" parent="CanvasLayer" instance=ExtResource("10_bp8ac")]

[connection signal="area_entered" from="ButPlayer" to="." method="_on_but_player_area_entered"]
[connection signal="area_exited" from="ButPlayer" to="." method="_on_but_player_area_exited"]
[connection signal="area_entered" from="ButAdversaire" to="." method="_on_but_adversaire_area_entered"]
[connection signal="area_exited" from="ButAdversaire" to="." method="_on_but_adversaire_area_exited"]
[connection signal="timeout" from="Control/Timer2" to="." method="_on_timer_timeout"]
